Style : fix text-overflow property

--- a/sass/restaurant-style.sass
+++ b/sass/restaurant-style.sass
@@ -100,7 +100,9 @@ img
 
   .content-card 
     padding: 12px 15px
-    text-overflow: ellipsis
+    overflow: hidden
+    white-space: nowrap
+    /*text-overflow: ellipsis
 
   .price
     padding: 12px 15px
